--- a/client/package.json
+++ b/client/package.json
@@ -45,10 +45,10 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.69.0",
-    "react-resizable-panels": "^4.0.15",
+    "react-resizable-panels": "^1.0.9",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
